Fix z-index dropdown overlay

--- a/app/styles.scss
+++ b/app/styles.scss
@@ -32,7 +32,6 @@
 
 .source-layer-dropdown {
   height: 1.6em;
-  z-index: 9999;
   max-width: 50%;
 
   .p-select-label {
